# metaz.maven-group.org

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  id_ed25519.enc  id_ed25519.pub  shell.nix
.github/workflows/: build-deploy.yml
.ssh/: known_hosts
ci/: Dockerfile-musl  build-server  build-site  download-geolite2-city  local  make-tar  run.sh
site/: Gemfile  _config.yml  appcast-old.xml  index.md  prerelease-notes.html  release-notes.html
site/_includes/: appcast.inc  release-notes.inc
site/_layouts/: default.html  home.html  notes.html
site/scripts/: get-data.rb
site/stylesheets/: styles.css
src/: download.rs  forward.rs  main.rs  staticassets.rs  symbolicate.rs  version_info.rs
src/plcrash/: mod.rs  symbolicate.rs  text.rs
src/plcrash/protos/: crash_report.rs
