[package]
name = "metazite"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>"]
build = "build.rs"

[[bin]]
name = "metazite"
path = "src/main.rs"
doc = false

[dependencies]
hyper = "0.14"
iron = "0.6"
mount = "0.4"
prometheus = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "1.0"
urlencoded = "0.6"
maxminddb = "0.13.0"
mime_guess = "1.8"
